<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuDelete"
        android:icon="@drawable/whitedelete"
        android:title="@string/delete"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menuSave"
        android:icon="@drawable/ic_save"
        android:title="@string/save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menuShare"
        android:icon="@drawable/whiteshare"
        android:title="@string/share"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/menuHelp"
        android:icon="@drawable/whiteshare"
        android:title="@string/help"
        app:showAsAction="collapseActionView"/>
</menu>