<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/advancelay"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/maincolor"
              android:orientation="horizontal">


    <TextView
        android:id="@+id/delete"
        style="@style/PaintTvStyle"
        android:drawableTop="@drawable/button_delete"
        android:text="@string/delete"/>

    <TextView
        android:id="@+id/share"
        style="@style/PaintTvStyle"
        android:drawableTop="@drawable/button_share"
        android:text="@string/share"/>


    <TextView
        android:id="@+id/save"
        style="@style/PaintTvStyle"
        android:drawableTop="@drawable/button_save"
        android:text="@string/save"/>

    <TextView
        android:id="@+id/more"
        style="@style/PaintTvStyle"
        android:drawableTop="@drawable/button_more"
        android:text="@string/action_more"/>
</LinearLayout>
