<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.7"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/advancelay2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg2"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/undo"
                style="@style/PaintSecondTvStyle"
                android:drawableTop="@drawable/sel_undo"
                android:text="@string/undo"/>

            <TextView
                android:id="@+id/redo"
                style="@style/PaintSecondTvStyle"
                android:drawableTop="@drawable/sel_redo"
                android:text="@string/redo"/>

            <RadioButton
                android:id="@+id/pickcolor"
                style="@style/PaintRadioBtnStyle"
                android:drawableTop="@drawable/checked_pickcolor"
                android:text="@string/pickcolor"/>

            <RadioButton
                android:id="@+id/drawline"
                style="@style/PaintRadioBtnStyle"
                android:drawableTop="@drawable/checked_drawline"
                android:text="@string/drawLine"/>

            <RadioButton
                android:id="@+id/jianbian_color"
                style="@style/PaintRadioBtnStyle"
                android:drawableTop="@drawable/checked_gradual"
                android:text="@string/normal_color"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>
</LinearLayout>