<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_round_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/after_effect"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/addwords"
            style="@style/AdvancePaintTvStyle"
            android:drawableTop="@drawable/bluetext"
            android:text="@string/addtext"/>

        <TextView
            android:id="@+id/addborder"
            style="@style/AdvancePaintTvStyle"
            android:drawableTop="@drawable/blueframe"
            android:text="@string/addborder"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="5dp"
        android:background="@color/gray"/>

    <FrameLayout
        android:id="@+id/paintview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/current_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:minHeight="50dp"
            android:scaleType="fitStart"/>

        <ImageView
            android:id="@+id/border"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvAECancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvAEOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="10dp"
            android:text="@string/ok"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>